--- a/E_Learning/templates/common/base.html
+++ b/E_Learning/templates/common/base.html
@@ -10,7 +10,8 @@
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
             <ul class="nav navbar-nav">    
-            <li><a lass="navbar-brand" href="{% url 'index' %}">HOME</a></li>
+            <li><a class="navbar-brand" href="{% url 'index' %}">HOME</a></li>
+            <li><a class="navbar-brand" href="{% url 'administrator:administrator_login' %}">Administrator Login</a></li>
 
     </nav>
     <div class="container">
