Teacher,student login links added to base template
Signed-off-by: Samir Gorai <samirgorai17@gmail.com>

--- a/E_Learning/templates/common/base.html
+++ b/E_Learning/templates/common/base.html
@@ -12,7 +12,8 @@
             <ul class="nav navbar-nav">    
             <li><a class="navbar-brand" href="{% url 'index' %}">HOME</a></li>
             <li><a class="navbar-brand" href="{% url 'administrator:administrator_login' %}">Administrator Login</a></li>
-
+            <li><a class="navbar-brand" href="{% url 'student_app:student_login' %}">Student Login</a></li>
+            <li><a class="navbar-brand" href="{% url 'teacher_app:teacher_login' %}">Teacher Login</a></li>
     </nav>
     <div class="container">
         {% block body_block %}
