--- a/E_Learning/templates/administrator/upload_student_success.html
+++ b/E_Learning/templates/administrator/upload_student_success.html
@@ -40,12 +40,12 @@
         <tbody>
             {% for item in dict_df_user_created %}
             <tr>
-                <td>{{ item.teacher_first_name }}</td>
-                <td>{{ item.teacher_last_name }}</td>
-                <td>{{ item.teacher_dob }}</td>
-                <td>{{ item.teacher_sex }}</td>
-                <td>{{ item.teacher_email }}</td>
-                <td>{{ item.teacher_mobile }}</td>
+                <td>{{ item.student_first_name }}</td>
+                <td>{{ item.student_last_name }}</td>
+                <td>{{ item.student_dob }}</td>
+                <td>{{ item.student_sex }}</td>
+                <td>{{ item.student_email }}</td>
+                <td>{{ item.student_mobile }}</td>
                 <td>{{ item.username }}</td>
                 <td>{{ item.password }}</td>
                 
@@ -72,12 +72,12 @@
         <tbody>
             {% for item in dict_df_user_not_created %}
             <tr>
-                <td>{{ item.teacher_first_name }}</td>
-                <td>{{ item.teacher_last_name }}</td>
-                <td>{{ item.teacher_dob }}</td>
-                <td>{{ item.teacher_sex }}</td>
-                <td>{{ item.teacher_email}}</td>
-                <td>{{ item.teacher_mobile }}</td>
+                <td>{{ item.student_first_name }}</td>
+                <td>{{ item.student_last_name }}</td>
+                <td>{{ item.student_dob }}</td>
+                <td>{{ item.student_sex }}</td>
+                <td>{{ item.student_email}}</td>
+                <td>{{ item.student_mobile }}</td>
 
                 
             </tr>
