--- a/E_Learning/templates/student/student_page.html
+++ b/E_Learning/templates/student/student_page.html
@@ -9,9 +9,13 @@
 <body>
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
-            <ul class="nav navbar-nav">    
+            <ul class="nav navbar-nav">       
             <li><a class="navbar-brand" href="{% url 'index' %}">HOME</a></li>
-            <li><a class="navbar-brand" href="{% url 'student_app:student_logout' %}">Student_Logout</a></li>
+            <li><a class="navbar-brand" href="{% url 'student_app:student_page' %}">Student Page</a></li>
+            <li><p class="navbar-brand">Welcome, {{ user.username }}!</p></li>
+            <li><a class="navbar-brand" href="{% url 'student_app:student_logout' %}">Logout</a></li>
+            </ul>
+        </div>
     </nav>
     <div class="container">
         <div class="jumbotron">
